// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: background-surface and label: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
button {
  position: relative;
  min-height: 48px;
  padding: 4px 50px 4px 16px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #f2f2f2;
  color: #000;
  text-align: left;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #e3e4e5;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.label {
  display: block;
  margin-bottom: -4px;
  color: #626669;
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.icon {
  position: absolute;
  top: 50%;
  margin-top: -12px;
  right: 16px;
}"
`;

exports[`getComponentCss() should return correct css for color: default and label: false 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
button {
  position: relative;
  min-height: 48px;
  padding: 4px 50px 4px 16px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #fff;
  color: #000;
  text-align: left;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #e3e4e5;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.icon {
  position: absolute;
  top: 50%;
  margin-top: -12px;
  right: 16px;
}"
`;

exports[`getComponentCss() should return correct css for color: default and label: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
button {
  position: relative;
  min-height: 48px;
  padding: 4px 50px 4px 16px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #fff;
  color: #000;
  text-align: left;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #e3e4e5;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.label {
  display: block;
  margin-bottom: -4px;
  color: #626669;
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.icon {
  position: absolute;
  top: 50%;
  margin-top: -12px;
  right: 16px;
}"
`;

exports[`getComponentCss() should return correct css for color: neutral-contrast-high and label: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
button {
  position: relative;
  min-height: 48px;
  padding: 4px 50px 4px 16px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #323639;
  color: #fff;
  text-align: left;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #000000;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.label {
  display: block;
  margin-bottom: -4px;
  color: #b0b1b2;
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.icon {
  position: absolute;
  top: 50%;
  margin-top: -12px;
  right: 16px;
}"
`;
